// Grib2 Index version 9 (gbx9)
syntax = "proto3";

option java_package = "ucar.nc2.grib.grib2";
option java_outer_classname = "Grib2IndexProto";

message GribIdSection {
  uint32 center_id = 1;
  uint32 subcenter_id = 2;
  uint32 master_table_version = 3;
  uint32 local_table_version = 4;
  uint32 significanceOfRT = 5;
  repeated uint32 refDate = 6 [packed=true]; // year, month, day, hour, minute, second;
  uint32 productionStatus = 7;
  uint32 processedDataType = 8;
}

message GribGdsSection {
  bytes gds = 2;
}

// we have the info in Grib2Record to reconstruct the indicator, id, gds, pds, drs, bms sections
// we need to read from original raf to get bitmap, Grib2Drs, and data
message Grib2Record {
  bytes header = 1;

  // indicator section
  uint64 gribMessageStart = 15;
  uint64 gribMessageLength = 2;
  uint32 discipline = 3;

  // id section
  GribIdSection ids = 4;

  // other sections
  bytes lus = 5;
  uint32 gdsIdx = 6;  // index into gdsList
  bytes pds = 7;

  // drs section
  uint64 drsPos = 8;
  uint32 drsTemplate = 9;
  uint32 drsNpoints = 10;

// bms section
  uint64 bmsPos = 11;   // if original is 254, replace with previously defined (starting with version 6)
  uint32 bmsIndicator = 12;
  bool bmsReplaced = 16;

  // data section
  uint64 dataPos = 13;
  uint32 dataLen = 14;

  oneof scanMode_present {
    uint32 scanMode = 17; // scanMode from gds added in version 4.5; proto2 has [default = 9999]
  }
}

message Grib2Index {
  string filename = 1;
  repeated GribGdsSection gdsList = 2;  // GDS factored out
  repeated Grib2Record records = 3;
  uint32 proto_version = 4; // added for proto3 in 5.0, to deal with scanMode default (set to 3).
}

//  cd c:/dev/github/thredds/grib/src/main/java
//  protoc --proto_path=. --java_out=. ucar/nc2/grib/grib2/grib2Index.proto

